frontend/src/components/navigationBar/navigationBar.m.css
@import "/src/styles/colors.css";


.organizationIcon {
    height: 20px;
    width: 20px;
    text-align: center;
    line-height: 20px;
    border-radius: 5px;
    background: #3e3e3e;
    color: white;
    font-size: 14px;
    display: inline-block;
    margin-top: 5px;
}

.organizationName {
    margin: 0 2px 0 8px;
    font-size: 16px;
    font-weight: bold;
    display: inline-block;
    height: 30px;
    line-height: 30px;
    text-overflow: ellipsis;
    max-width: 150px;
    white-space: nowrap;
    overflow: hidden;
    user-select: none;
}

.caret {
    display: inline-block;
    height: 20px;
    width: 20px;
    padding-top: 3px;
}

.newAnalysis {
    height: 32px;
    display: flex;
    flex-direction: row;
    width: 100%;
    border-radius: 5px;
    background: var(--primary-color);
    color: white;
    text-decoration: none;
    align-items: center;
    padding-left: 10px;
    font-size: 14px;
    box-shadow: rgb(0 0 0 / 7%) 0px 1px 1px;
    border: 1px solid #508368;
    cursor: pointer;
    user-select: none;
}

.newAnalysis:hover {
    background: var(--primary-highlight-color);
}

.activeRouteContainer {
    background: #d6d6d6;
    padding-left: 15px;
    display: flex;
    flex-direction: row;
    height: 30px;
    box-sizing: border-box;
    cursor: pointer;
    align-items: center;
    color: var(--primary-text-color);
    text-decoration: none;
    margin: 0 20px;
    border-radius: 5px;
    margin-bottom: 5px;
    user-select: none;
}

.routeContainer {
    padding-left: 15px;
    display: flex;
    flex-direction: row;
    height: 30px;
    box-sizing: border-box;
    cursor: pointer;
    align-items: center;
    color: var(--primary-text-color);
    text-decoration: none;
    margin: 0 20px;
    border-radius: 5px;
    margin-bottom: 5px;
    user-select: none;
}

.routeContainer:hover {
    background: #d6d6d6;
}

.route {
    padding-top: 1px;
    display: inline-block;
    margin-left: 8px;
    font-size: 14px;
}

.routeIcon {
    display: inline-block;
    height: 30px;
    width: 30px;
}

.helpContainer {
    margin: auto 20px 20px;
    cursor: pointer;
    user-select: none;
}

